# BROADCAST-OPERATIONS-ERP-SYSTEM

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  package.json  tsconfig.build.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/database/: prisma.service.ts
apps/api/src/system/: app-config.service.ts  health.controller.ts  health.service.ts  system.module.ts
apps/api/src/types/: express.d.ts
apps/api/test/auth/: auth.service.spec.ts  permissions.guard.spec.ts
apps/api/test/events/: assignment-engine.spec.ts  availability.service.spec.ts  event-permissions.spec.ts
apps/api/test/finance/: expense-workflow.spec.ts  financial-locks.spec.ts  ledger-integrity.spec.ts  (+1 more)
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: components.json  eslint.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
docker/: README.md  api.Dockerfile  web.Dockerfile
docs/: VM_QUICKSTART.md
docs/architecture/: foundation.md  platform-foundation.md
docs/production/: CHECKLIST.md  DEPLOYMENT.md  ENVIRONMENT.md  RECOVERY.md  RUNBOOK.md
scripts/: backup-postgres.sh  update-vm-ip.sh  verify-docker.sh
(+176 files in other folders)
